metadata/force-app/main/default/objects/CustomName_wMMjR__c/CustomName_wMMjR__c.object-meta.xml
<CustomObject>
    <description>Description_FrXPG</description>
    <label>CustomLabel_uubuG</label>
    <nameField>
        <label>CustomLabel_uubuG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_uubuGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>