metadata/force-app/main/default/objects/CustomName_wMMjR__c/fields/CustomField_ytKqu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ytKqu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvVuKF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>